# graph-search

./: .gitignore  Makefile  PROJECT_PLAN.md  README.md  requirements.txt  run_demo.py
backend/: config.py  dependencies.py  main.py  pyproject.toml  requirements.txt  state.py
backend/api/: __init__.py  map.py  routes.py
backend/core/: __init__.py  graph.py  shortest_path.py
backend/data/: __init__.py  load_osm.py
backend/models/: __init__.py  schemas.py
frontend/: package-lock.json  package.json
frontend/app/: api.ts  layout.tsx  page.tsx
frontend/app/api/routes/shortest/: route.ts
frontend/app/components/: MapView.tsx  SearchPanel.tsx  map-view.tsx  search-panel.tsx
frontend/lib/: api.ts
frontend/models/: schemas.ts
tests/: test_shortest_path.py
